--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,19 +1,23 @@
 {
   "dependencies": {
+    "com.adrenak.restsharp.unity": "1.1.0",
+    "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
     "com.srcnalt.openai-unity": "https://github.com/srcnalt/OpenAI-Unity.git",
-    "com.unity.2d.animation": "5.1.0",
-    "com.unity.2d.pixel-perfect": "4.0.1",
-    "com.unity.2d.psdimporter": "4.2.0",
+    "com.unity.2d.animation": "9.0.3",
+    "com.unity.2d.pixel-perfect": "5.0.3",
+    "com.unity.2d.psdimporter": "8.0.2",
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.2d.spriteshape": "5.2.0",
+    "com.unity.2d.spriteshape": "9.0.2",
     "com.unity.2d.tilemap": "1.0.0",
-    "com.unity.collab-proxy": "1.15.7",
-    "com.unity.ide.rider": "2.0.7",
-    "com.unity.ide.visualstudio": "2.0.14",
-    "com.unity.ide.vscode": "1.2.4",
-    "com.unity.test-framework": "1.1.29",
+    "com.unity.ai.navigation": "1.1.4",
+    "com.unity.collab-proxy": "2.0.5",
+    "com.unity.editorcoroutines": "1.0.0",
+    "com.unity.ide.rider": "3.0.24",
+    "com.unity.ide.visualstudio": "2.0.18",
+    "com.unity.ide.vscode": "1.2.5",
+    "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.4.8",
+    "com.unity.timeline": "1.7.5",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
@@ -46,5 +50,14 @@
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
-  }
+  },
+  "scopedRegistries": [
+    {
+      "name": "package.openupm.com",
+      "url": "https://package.openupm.com",
+      "scopes": [
+        "com.adrenak.restsharp.unity"
+      ]
+    }
+  ]
 }
